static/css/index-nav.css
#nav {
  padding: 10px 10px;
  background: #FFF;
  -webkit-transition: 0.2s padding;
  transition: 0.2s padding;
  z-index: 999;
}

#nav.navbar {
  border: none;
  border-radius: 0;
  margin-bottom: 0px;
}

#nav.fixed-nav {
  position: fixed;
  left: 0;
  right: 0;
  padding: 30px 35px;
  background-color: #FFF !important;
  border-bottom: 1px solid #EEE;
}

#nav.nav-transparent {
  background: transparent;
}

/* -- default nav -- */

@media only screen and (min-width: 768px) {
  .main-nav li {
      padding: 0px 15px;
  }
  .main-nav li a {
    font-size: 14px;
    -webkit-transition: 0.2s color;
    transition: 0.2s color;
  }
  .main-nav>li>a {
    color: #10161A;
    padding: 15px 0px;
  }
  #nav.nav-transparent:not(.fixed-nav) .main-nav>li>a {
    color: #fff;
  }
  .main-nav>li>a:hover, .main-nav>li>a:focus, .main-nav>li.active>a {
    background: transparent;
    color: #6aa69b;
  }
  .main-nav>li>a:after {
    content: "";
    display: block;
    background-color: #e3bc72;
    height: 3px;
    width: 0%;
    -webkit-transition: 0.2s width;
    transition: 0.2s width;
  }
  .main-nav>li>a:hover:after, .main-nav>li.active>a:after {
    width: 100%;
  }

  /* dropdown */
  .has-dropdown {
    position: relative;
  }
  .has-dropdown>a:before {
    font-family: 'FontAwesome';
    content: "\f054";
    font-size: 6px;
    margin-left: 6px;
    float: right;
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
    -webkit-transition: 0.2s transform;
    transition: 0.2s transform;
  }
  .dropdown {
    position: absolute;
    right: -50%;
    top: 0;
    background-color: #e3bc72;
    width: 200px;
    -webkit-box-shadow: 0px 5px 5px -5px rgba(53, 64, 82, 0.2);
    box-shadow: 0px 5px 5px -5px rgba(53, 64, 82, 0.2);
    -webkit-transform: translateY(15px) translateX(50%);
    -ms-transform: translateY(15px) translateX(50%);
    transform: translateY(15px) translateX(50%);
    opacity: 0;
    visibility: hidden;
    -webkit-transition: 0.2s all;
    transition: 0.2s all;
  }
  .main-nav>.has-dropdown>.dropdown {
    top: 100%;
    right: 50%;
  }
  .main-nav>.has-dropdown>.dropdown .dropdown.dropdown-left {
    right: 150%;
  }
  .dropdown li a {
    display: block;
    color: #FFF;
    border-top: 1px solid rgba(250, 250, 250, 0.1);
    padding: 10px 0px;
  }
  .dropdown li:nth-child(1) a {
    border-top: none;
  }
  .has-dropdown:hover>.dropdown {
    opacity: 1;
    visibility: visible;
    -webkit-transform: translateY(0px) translateX(50%);
    -ms-transform: translateY(0px) translateX(50%);
    transform: translateY(0px) translateX(50%);
  }
  .has-dropdown:hover>a:before {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  .nav-collapse {
    display: none;
  }
}

/* -- mobile nav -- */

@media only screen and (max-width: 767px) {
  #nav {
    padding: 0px 0px;
  }
  #nav.nav-transparent {
    background: #FFF;
  }
  .main-nav {
    position: fixed;
    right: 0;
    height: calc(100vh - 80px);
    -webkit-box-shadow: 0px 80px 0px 0px #1C1D21;
    box-shadow: 0px 80px 0px 0px #1C1D21;
    max-width: 250px;
    width: 0%;
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
    margin: 0;
    overflow-y: auto;
    background: #1C1D21;
    -webkit-transition: 0.2s all;
    transition: 0.2s all;
  }
  #nav.open .main-nav {
    -webkit-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
    width: 100%;
  }
  .main-nav li {
    border-top: 1px solid rgba(250, 250, 250, 0.1);
  }
  .main-nav li a {
    display: block;
    color: #FFF;
    -webkit-transition: 0.2s all;
    transition: 0.2s all;
  }
  .main-nav>li.active {
    border-left: 6px solid #6aa69b;
  }
  .main-nav li a:hover, .main-nav li a:focus {
    background-color: #6aa69b;
    color: #FFF;
    opacity: 1;
  }
  .has-dropdown>a:after {
    content: "\f054";
    font-family: 'FontAwesome';
    float: right;
    -webkit-transition: 0.2s -webkit-transform;
    transition: 0.2s -webkit-transform;
    transition: 0.2s transform;
    transition: 0.2s transform, 0.2s -webkit-transform;
  }
  .dropdown {
    opacity: 0;
    visibility: hidden;
    height: 0;
    background: rgba(250, 250, 250, 0.1);
  }
  .dropdown li a {
    padding: 6px 10px;
  }
  .has-dropdown.open-drop>a:after {
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
  }
  .has-dropdown.open-drop>.dropdown {
    opacity: 1;
    visibility: visible;
    height: auto;
    -webkit-transition: 0.2s all;
    transition: 0.2s all;
  }
}

/* -- nav btn collapse -- */

.nav-collapse {
  position: relative;
  float: right;
  width: 40px;
  height: 40px;
  margin-top: 5px;
  margin-right: 5px;
  cursor: pointer;
  z-index: 99999;
}

.nav-collapse span {
  display: block;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  position: absolute;
  top: 50%;
  left: 50%;
  width: 25px;
}

.nav-collapse span:before, .nav-collapse span:after {
  content: "";
  display: block;
}

.nav-collapse span, .nav-collapse span:before, .nav-collapse span:after {
  height: 4px;
  background: #10161A;
  -webkit-transition: 0.2s all;
  transition: 0.2s all;
}

.nav-collapse span:before {
  -webkit-transform: translate(0%, 10px);
  -ms-transform: translate(0%, 10px);
  transform: translate(0%, 10px);
}

.nav-collapse span:after {
  -webkit-transform: translate(0%, -14px);
  -ms-transform: translate(0%, -14px);
  transform: translate(0%, -14px);
}

#nav.open .nav-collapse span {
  background: transparent;
}

#nav.open .nav-collapse span:before {
  -webkit-transform: translateY(0px) rotate(-135deg);
  -ms-transform: translateY(0px) rotate(-135deg);
  transform: translateY(0px) rotate(-135deg);
}

#nav.open .nav-collapse span:after {
  -webkit-transform: translateY(-4px) rotate(135deg);
  -ms-transform: translateY(-4px) rotate(135deg);
  transform: translateY(-4px) rotate(135deg);
}

/* -- logo -- */

.navbar-brand {
  padding: 0;
}

.navbar-brand .logo, .navbar-brand .logo-alt {
  max-height: 70px;
  display: block;
}

#nav:not(.nav-transparent):not(.fixed-nav) .navbar-brand .logo-alt {
  display: none;
}

#nav.nav-transparent:not(.fixed-nav) .navbar-brand .logo {
  display: none;
}

#nav.fixed-nav .navbar-brand .logo-alt {
  display: none;
}

@media only screen and (max-width: 767px) {
  #nav.nav-transparent .navbar-brand .logo-alt {
    display: none !important;
  }
  #nav.nav-transparent .navbar-brand .logo {
    display: block !important;
  }
}

